--- a/Sprint7.ipynb
+++ b/Sprint7.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6324f152",
    "metadata": {},
    "outputs": [
@@ -29,21 +29,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.97195718340686\n"
+      "Tu imc de 7.5 es de bajo peso\n"
      ]
     }
    ],
    "source": [
     "imc = 0\n",
     "\n",
-    "peso=float(input(\"Introduce tu peso: (en kilos)\"))\n",
-    "altura=float(input(\"Introduce tu altura: (en metros) \"))\n",
     "\n",
-    "def calculadoraIMC(peso,altura):\n",
+    "def calculadoraIMC():\n",
+    "    peso=float(input(\"Introduce tu peso: (en kilos)\"))\n",
+    "    altura=float(input(\"Introduce tu altura: (en metros) \"))\n",
     "    imc = peso/(altura*altura)\n",
-    "    print(imc)\n",
+    "    if(imc<18.5):\n",
+    "        print(f\"Tu imc de {imc} es de bajo peso\")\n",
+    "    elif(imc>=18.5 and imc<=24.9):\n",
+    "        print(f\"Tu imc de {imc} es de peso normal\")\n",
+    "    elif(imc>=25 and imc<=30):\n",
+    "        print(f\"Tu imc de {imc} es de sobrepeso\")\n",
+    "    else:\n",
+    "        print(f\"Tu imc de {imc} es de obesidad\")\n",
     "\n",
-    "calculadoraIMC(peso,altura)"
+    "\n",
+    "calculadoraIMC()\n"
    ]
   },
   {
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b749f16",
    "metadata": {},
    "outputs": [
@@ -66,20 +74,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grados Fahrenheit:  89.96\n",
-      "Grados Kelvin:  305.35\n",
-      "Grados Réaumur:  25.76\n",
-      "Grados Rankine:  549.63\n"
+      "Grados Fahrenheit:  93.2\n",
+      "Grados Kelvin:  307.15\n",
+      "Grados Réaumur:  27.2\n",
+      "Grados Rankine:  552.87\n"
      ]
     }
    ],
    "source": [
-    "celsius=float(input(\"Introduce la teperatura en grados celcius: \"))\n",
+    "def calculadoraTempe():\n",
+    "    celsius=float(input(\"Introduce la teperatura en grados celcius: \"))\n",
+    "    print(\"Grados Fahrenheit: \" , round((celsius*(9/5))+32 , 2))\n",
+    "    print(\"Grados Kelvin: \" , round(celsius+273.15 , 2))\n",
+    "    print(\"Grados Réaumur: \" , round(celsius*(4/5) , 2))\n",
+    "    print(\"Grados Rankine: \" , round((celsius+273.15)*(9/5) , 2))\n",
     "\n",
-    "print(\"Grados Fahrenheit: \" , round((celsius*(9/5))+32 , 2))\n",
-    "print(\"Grados Kelvin: \" , round(celsius+273.15 , 2))\n",
-    "print(\"Grados Réaumur: \" , round(celsius*(4/5) , 2))\n",
-    "print(\"Grados Rankine: \" , round((celsius+273.15)*(9/5) , 2))"
+    "calculadoraTempe()"
    ]
   },
   {
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b019503b",
    "metadata": {},
    "outputs": [
@@ -102,19 +112,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "paraula=input(\"Introdueix una paraula: \")\n",
+    "def contadorParaules():\n",
+    "    paraula=input(\"Introdueix una paraula: \")\n",
+    "    contador={}\n",
+    "    for x in range(len(paraula)):\n",
+    "        contador[paraula[x]]=paraula[x]\n",
+    "    print(len(contador))\n",
     "\n",
-    "contador={}\n",
-    "\n",
-    "for x in range(len(paraula)):\n",
-    "    contador[paraula[x]]=paraula[x]\n",
-    "\n",
-    "print(len(contador))"
+    "contadorParaules()"
    ]
   },
   {
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "97204c50",
    "metadata": {},
    "outputs": [
@@ -253,7 +263,7 @@
     }
    ],
    "source": [
-    "clientList = [ '1.3', 'one' , '1e10' , 'seven', '3-1/2', ('2',1,1.4,'not-a-number'), [1,2,'3','3.4']]\n",
+    "clientList = [ '1.3', 'one', '1e10' , 'seven', '3-1/2', ('2',1,1.4,'not-a-number'), [1,2,'3','3.4']]\n",
     "canConvert=[]\n",
     "cantConvert=[]\n",
     "\n",
@@ -278,10 +288,11 @@
     "                cantConvert.append(x)\n",
     "        else:\n",
     "            canConvert.append(float(x))\n",
+    "    print(canConvert)\n",
+    "    print(cantConvert)\n",
     "\n",
-    "toFloatConverter()\n",
-    "print(canConvert)\n",
-    "print(cantConvert)"
+    "\n",
+    "toFloatConverter()"
    ]
   },
   {
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "id": "60e2bcbe",
    "metadata": {},
    "outputs": [
@@ -477,32 +488,36 @@
     "with open('tu_me_quieres_blanca.txt', 'r', encoding='utf-8') as f:\n",
     "    texto = f.read()\n",
     "\n",
-    "texto = texto.replace('.', '').replace(',', '').replace('(', '').replace(')', '').replace(\"!\",\"\").replace(\"¡\",\"\")\n",
-    "texto = texto.lower()\n",
-    "palabras=texto.split()\n",
     "\n",
-    "dictionary={}\n",
+    "def contadorEndreçador(texto):\n",
+    "    texto = texto.replace('.', '').replace(',', '').replace('(', '').replace(')', '').replace(\"!\",\"\").replace(\"¡\",\"\")\n",
+    "    texto = texto.lower()\n",
+    "    palabras=texto.split()\n",
     "\n",
-    "for x in palabras:\n",
-    "    letra=x[0]\n",
-    "    if(letra not in dictionary):\n",
-    "        dictionary[letra]={}\n",
-    "    if(x not in dictionary[letra]):\n",
-    "        dictionary[letra][x]=1\n",
-    "    else:\n",
-    "        dictionary[letra][x]+=1\n",
+    "    dictionary={}\n",
+    "\n",
+    "    for x in palabras:\n",
+    "        letra=x[0]\n",
+    "        if(letra not in dictionary):\n",
+    "            dictionary[letra]={}\n",
+    "        if(x not in dictionary[letra]):\n",
+    "            dictionary[letra][x]=1\n",
+    "        else:\n",
+    "            dictionary[letra][x]+=1\n",
+    "\n",
+    "    dictionary = {\n",
+    "        letra: dict(sorted(palabras.items()))\n",
+    "        for letra, palabras in sorted(dictionary.items())\n",
+    "    }\n",
+    "\n",
+    "    for letra, palabras in dictionary.items():\n",
+    "        print(f\"Letra: {letra}\")\n",
+    "        for palabra, cuenta in palabras.items():\n",
+    "            print(f\" {palabra}: {cuenta}\")\n",
+    "        print()\n",
     "\n",
     "\n",
-    "dictionary = {\n",
-    "    letra: dict(sorted(palabras.items()))\n",
-    "    for letra, palabras in sorted(dictionary.items())\n",
-    "}\n",
-    "\n",
-    "for letra, palabras in dictionary.items():\n",
-    "    print(f\"Letra: {letra}\")\n",
-    "    for palabra, cuenta in palabras.items():\n",
-    "        print(f\" {palabra}: {cuenta}\")\n",
-    "    print()"
+    "contadorEndreçador(texto)"
    ]
   }
  ],
