--- a/Sprint8.2.ipynb
+++ b/Sprint8.2.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Script usado para importar la base de datos en power bi\n",
     "import pandas as pd\n",
     "import mysql.connector\n",
     "\n",
@@ -75,16 +76,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = dataset.drop_duplicates()\n",
-    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.tight_layout()\n",
     "seab.set_theme()\n",
     "seab.countplot(data=df, x='product_id',order=df[\"product_id\"].value_counts().index) \n",
-    "plt.title(\"Cantidad productos vendidos\")\n",
-    "plt.xlabel('ID Producto')\n",
-    "plt.ylabel(\"Cantidad vendida\")\n",
+    "plt.xlabel('ID Producto', fontsize=14)\n",
+    "plt.ylabel(\"Cantidad vendida\", fontsize=14)\n",
     "plt.show()"
    ]
   },
@@ -103,6 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
@@ -117,9 +121,8 @@
     "seab.set_theme()\n",
     "plt.figure(figsize=(10, 5))\n",
     "ax = seab.barplot(data=df_grouped, x='product_id', y='suma', order=df_grouped['product_id'])\n",
-    "plt.title(\"Cantidad de dólares generada por producto\")\n",
-    "plt.xlabel(\"ID del producto\")\n",
-    "plt.ylabel(\"Total\")\n",
+    "plt.xlabel(\"ID del producto\", fontsize=14)\n",
+    "plt.ylabel(\"Total\", fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -143,6 +146,7 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "df_grouped = df.groupby(\"country\").size().reset_index(name=\"cantPais\")\n",
     "df_top = df_grouped.sort_values(by=\"cantPais\", ascending=False)\n",
     "\n",
@@ -154,7 +158,6 @@
     "    startangle=45,\n",
     "    wedgeprops={'edgecolor': 'green'}\n",
     ")\n",
-    "plt.title('Total de compañías por país')\n",
     "plt.axis('equal') \n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -175,6 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -184,10 +189,10 @@
     "plt.yscale(\"log\")\n",
     "plt.xticks(rotation=90) \n",
     "seab.barplot(data=df, x='company_id',y='amount',order=order) \n",
-    "\n",
-    "plt.title(\"Cantidad de dolares por compañia\")\n",
+    "plt.tight_layout(pad=2)\n",
     "plt.xlabel('ID Compañia')\n",
-    "plt.ylabel(\"Cantidad\")"
+    "plt.ylabel(\"Cantidad en dolares\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -205,6 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
@@ -212,10 +219,9 @@
     "seab.set_theme()\n",
     "plt.figure(figsize=(15, 8)) \n",
     "seab.countplot(data=df, x='country.1', hue='country',legend=1)\n",
-    "\n",
-    "plt.title(\"Cantidad de usuarios por país\")\n",
-    "plt.xlabel('País del usuario')\n",
-    "plt.ylabel(\"Cantidad\")\n",
+    "plt.tight_layout(pad=2)\n",
+    "plt.xlabel('País del usuario', fontsize=16)\n",
+    "plt.ylabel(\"Cantidad\", fontsize=16)\n",
     "plt.show()"
    ]
   },
@@ -234,16 +240,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
-    "seab.set_theme()\n",
     "\n",
+    "seab.set_theme()\n",
+    "plt.tight_layout()\n",
     "g=seab.catplot(data=df, x=\"country\", y=\"amount\", kind=\"swarm\",height=6, aspect=2)\n",
     "g.set_xticklabels(rotation=45)\n",
-    "plt.title('Suma total de dolares de las compañias clasificadas por país')\n",
-    "plt.ylabel(\"Total en dolares\")\n",
-    "plt.xlabel(\"País\")\n",
+    "plt.ylabel(\"Total en dolares\", fontsize=14)\n",
+    "plt.xlabel(\"País\", fontsize=14)\n",
     "plt.show()"
    ]
   },
@@ -262,13 +270,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "df = df.rename(columns={\n",
+    "    'amount': 'Cantidad en dólares',\n",
+    "    'product_id': 'Cantidad de productos'\n",
+    "})\n",
+    "plt.tight_layout(pad=2)\n",
     "seab.set_theme()\n",
     "g=seab.pairplot(df,size=4)\n",
-    "plt.title('Correlación cantidad de productos con total gastado',loc='center',y=2.02,x=0)\n",
+    "for ax in g.axes.flatten():\n",
+    "    ax.set_xlabel(ax.get_xlabel(), fontsize=16)\n",
+    "    ax.set_ylabel(ax.get_ylabel(), fontsize=16)\n",
+    "    ax.tick_params(axis='both', labelsize=10)\n",
     "plt.show()"
    ]
   },
@@ -294,7 +312,25 @@
    "id": "ee964d12",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as seab\n",
+    "import matplotlib.pyplot as plt\n",
+    "df = df.rename(columns={\n",
+    "    'amount': 'Cantidad en dólares',\n",
+    "    'product_id': 'Cantidad de productos',\n",
+    "    \"weight\" : \"Peso del producto\",\n",
+    "    \"price\" : \"Precio del prodcto\"\n",
+    "})\n",
+    "seab.set_theme()\n",
+    "g=seab.pairplot(df, height=4)\n",
+    "for ax in g.axes.flatten():\n",
+    "    ax.set_xlabel(ax.get_xlabel(), fontsize=18)\n",
+    "    ax.set_ylabel(ax.get_ylabel(), fontsize=18)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,7 +346,23 @@
    "id": "73d4525f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as seab\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df = df.rename(columns={\n",
+    "    'amount': 'Cantidad en dólares',\n",
+    "    'weight': 'Peso del producto'\n",
+    "})\n",
+    "seab.set_theme()\n",
+    "g=seab.jointplot(data=df, x=\"Cantidad en dólares\", y=\"Peso del producto\") \n",
+    "g.ax_joint.set_xlabel(\"Cantidad en dólares\", fontsize=16)\n",
+    "g.ax_joint.set_ylabel(\"Peso del producto\", fontsize=16)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,7 +386,21 @@
    "id": "0302941a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as seab\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "seab.set_theme()\n",
+    "seab.violinplot(data=df, x=\"country\", y='amount', inner=None, color=\"lightgray\")\n",
+    "seab.stripplot(data=df, x='country', y='amount', color='black', size=3, jitter=True)\n",
+    "plt.tight_layout()\n",
+    "plt.ylabel(\"Dolares\" , fontsize=13)\n",
+    "plt.xlabel(\"País\", fontsize=13)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,7 +416,22 @@
    "id": "e5d95682",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = dataset.drop_duplicates()\n",
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as seab\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "seab.set_theme()\n",
+    "g = seab.FacetGrid(df, col='country', height=4, aspect=1.2)\n",
+    "g.map_dataframe(seab.barplot, x='country.1', y=\"amount\")\n",
+    "g.set_axis_labels(\"País de la empresa\", \"Cantidad en dólares\")\n",
+    "g.set_xticklabels(rotation=90, fontsize=10) \n",
+    "g.set_xticklabels(rotation=90)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
