--- a/Sprint7.ipynb
+++ b/Sprint7.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6324f152",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tu imc de 7.5 es de bajo peso\n"
+      "Tu imc de 19.90356006976506 es de peso normal\n"
      ]
     }
    ],
@@ -43,9 +43,9 @@
     "    imc = peso/(altura*altura)\n",
     "    if(imc<18.5):\n",
     "        print(f\"Tu imc de {imc} es de bajo peso\")\n",
-    "    elif(imc>=18.5 and imc<=24.9):\n",
+    "    elif(imc<=24.9):\n",
     "        print(f\"Tu imc de {imc} es de peso normal\")\n",
-    "    elif(imc>=25 and imc<=30):\n",
+    "    elif(imc<=30):\n",
     "        print(f\"Tu imc de {imc} es de sobrepeso\")\n",
     "    else:\n",
     "        print(f\"Tu imc de {imc} es de obesidad\")\n",
@@ -104,25 +104,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b019503b",
+   "execution_count": null,
+   "id": "f3b1e879",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "{'a': 1, 'jose': 1, 'maria': 2}\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "import pprint\n",
+    "\n",
+    "def parse_text():\n",
+    "    text = input(\"Introdueix una paraula: \")\n",
+    "    text = re.sub(r\"[!,\\.\\)\\(¡]\", \"\", text)\n",
+    "    text = text.lower()\n",
+    "    text = text.split()\n",
+    "    return text\n",
+    "\n",
     "def contadorParaules():\n",
-    "    paraula=input(\"Introdueix una paraula: \")\n",
+    "    text=parse_text()\n",
     "    contador={}\n",
-    "    for x in range(len(paraula)):\n",
-    "        contador[paraula[x]]=paraula[x]\n",
-    "    print(len(contador))\n",
+    "\n",
+    "    for x in (text):\n",
+    "        if(contador.get(x) is None):\n",
+    "            contador[x]=1\n",
+    "        else:\n",
+    "            contador[x]+=1\n",
+    "    pprint.pprint(contador)\n",
     "\n",
     "contadorParaules()"
    ]
@@ -139,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "792f52d5",
    "metadata": {},
    "outputs": [
@@ -159,17 +173,13 @@
     "def reverseDictionarys(dictionary):\n",
     "    tempDictionary={}\n",
     "    for x in dictionary: \n",
-    "        if(tempDictionary.get(dictionary[x])==None):\n",
+    "        if(tempDictionary.get(dictionary[x]) is None):\n",
     "            tempDictionary[dictionary[x]]=x\n",
     "        else:\n",
     "             print(\"Error: multiple keys for one value\")\n",
     "             return\n",
     "    dictionary.clear()\n",
-    "    for x in tempDictionary:\n",
-    "            dictionary[x]=tempDictionary[x]\n",
-    "    print(dictionary)\n",
-    "        \n",
-    "\n",
+    "    print(tempDictionary)\n",
     "\n",
     "reverseDictionarys(reverse_dictionary1)\n",
     "reverseDictionarys(reverse_dictionary2)\n"
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "844a2bda",
    "metadata": {},
    "outputs": [
@@ -216,7 +226,7 @@
     "    tempDictionary={}\n",
     "    tempList=[]\n",
     "    for x in dictionary: \n",
-    "        if(tempDictionary.get(dictionary[x])==None):\n",
+    "        if(tempDictionary.get(dictionary[x]) is None):\n",
     "            tempDictionary[dictionary[x]]=x\n",
     "        else:\n",
     "            if type(tempDictionary[dictionary[x]])==list:\n",
@@ -226,10 +236,7 @@
     "                tempList.append(x)\n",
     "                tempDictionary[dictionary[x]]=tempList.copy()\n",
     "                tempList.clear()\n",
-    "    dictionary.clear()\n",
-    "    for x in tempDictionary:\n",
-    "            dictionary[x]=tempDictionary[x]\n",
-    "    print(dictionary)\n",
+    "    print(tempDictionary)\n",
     "        \n",
     "\n",
     "\n",
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "97204c50",
    "metadata": {},
    "outputs": [
@@ -264,8 +271,6 @@
    ],
    "source": [
     "clientList = [ '1.3', 'one', '1e10' , 'seven', '3-1/2', ('2',1,1.4,'not-a-number'), [1,2,'3','3.4']]\n",
-    "canConvert=[]\n",
-    "cantConvert=[]\n",
     "\n",
     "def convertError(value):\n",
     "    try:\n",
@@ -275,8 +280,10 @@
     "        return True\n",
     "\n",
     "\n",
-    "def toFloatConverter():\n",
-    "    for x in clientList:\n",
+    "def toFloatConverter(client_list):\n",
+    "    canConvert=[]\n",
+    "    cantConvert=[]\n",
+    "    for x in client_list:\n",
     "        if(convertError(x)):\n",
     "            if(type(x)==tuple or type(x)==list):\n",
     "                for y in x:\n",
@@ -292,7 +299,7 @@
     "    print(cantConvert)\n",
     "\n",
     "\n",
-    "toFloatConverter()"
+    "toFloatConverter(clientList)"
    ]
   },
   {
@@ -315,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "60e2bcbe",
    "metadata": {},
    "outputs": [
@@ -324,173 +331,176 @@
      "output_type": "stream",
      "text": [
       "Letra: a\n",
-      " a: 3\n",
-      " agua:: 1\n",
-      " al: 2\n",
-      " alba: 4\n",
-      " alcobas: 1\n",
-      " alimenta: 1\n",
-      " alma: 1\n",
-      " amarga;: 1\n",
-      " azucena: 1\n",
+      "' a: 3'\n",
+      "' agua:: 1'\n",
+      "' al: 2'\n",
+      "' alba: 4'\n",
+      "' alcobas: 1'\n",
+      "' alimenta: 1'\n",
+      "' alma: 1'\n",
+      "' amarga;: 1'\n",
+      "' azucena: 1'\n",
       "\n",
       "Letra: b\n",
-      " baco: 1\n",
-      " banquete: 1\n",
-      " bebe: 1\n",
-      " blanca: 3\n",
-      " boca;: 1\n",
-      " bosques: 1\n",
-      " buen: 1\n",
+      "' baco: 1'\n",
+      "' banquete: 1'\n",
+      "' bebe: 1'\n",
+      "' blanca: 3'\n",
+      "' boca;: 1'\n",
+      "' bosques: 1'\n",
+      "' buen: 1'\n",
       "\n",
       "Letra: c\n",
-      " cabañas;: 1\n",
-      " carnes: 2\n",
-      " casta: 3\n",
-      " cerrada: 1\n",
-      " con: 4\n",
-      " conservas: 1\n",
-      " copas: 1\n",
-      " corola: 1\n",
-      " corriste: 1\n",
-      " cuando: 2\n",
-      " cubierto: 1\n",
-      " cuerpo: 1\n",
-      " cuáles: 1\n",
+      "' cabañas;: 1'\n",
+      "' carnes: 2'\n",
+      "' casta: 3'\n",
+      "' cerrada: 1'\n",
+      "' con: 4'\n",
+      "' conservas: 1'\n",
+      "' copas: 1'\n",
+      "' corola: 1'\n",
+      "' corriste: 1'\n",
+      "' cuando: 2'\n",
+      "' cubierto: 1'\n",
+      "' cuerpo: 1'\n",
+      "' cuáles: 1'\n",
       "\n",
       "Letra: d\n",
-      " de: 8\n",
-      " dejaste: 1\n",
-      " del: 1\n",
-      " diga: 1\n",
-      " dios: 2\n",
-      " duerme: 1\n",
+      "' de: 8'\n",
+      "' dejaste: 1'\n",
+      "' del: 1'\n",
+      "' diga: 1'\n",
+      "' dios: 2'\n",
+      "' duerme: 1'\n",
       "\n",
       "Letra: e\n",
-      " el: 4\n",
-      " ellas: 1\n",
-      " en: 4\n",
-      " engaño: 1\n",
-      " enredada: 1\n",
-      " entonces: 1\n",
-      " escarcha;: 1\n",
-      " espumas: 1\n",
-      " esqueleto: 1\n",
-      " estrago: 1\n",
+      "' el: 4'\n",
+      "' ellas: 1'\n",
+      "' en: 4'\n",
+      "' engaño: 1'\n",
+      "' enredada: 1'\n",
+      "' entonces: 1'\n",
+      "' escarcha;: 1'\n",
+      "' espumas: 1'\n",
+      "' esqueleto: 1'\n",
+      "' estrago: 1'\n",
       "\n",
       "Letra: f\n",
-      " festejando: 1\n",
-      " filtrado: 1\n",
-      " frutos: 1\n",
+      "' festejando: 1'\n",
+      "' filtrado: 1'\n",
+      "' frutos: 1'\n",
       "\n",
       "Letra: h\n",
-      " habla: 1\n",
-      " hacia: 1\n",
-      " haya: 1\n",
-      " hayas: 1\n",
-      " hermana: 1\n",
-      " hombre: 1\n",
-      " hubiste: 1\n",
-      " huye: 1\n",
+      "' habla: 1'\n",
+      "' hacia: 1'\n",
+      "' haya: 1'\n",
+      "' hayas: 1'\n",
+      "' hermana: 1'\n",
+      "' hombre: 1'\n",
+      "' hubiste: 1'\n",
+      "' huye: 1'\n",
       "\n",
       "Letra: i\n",
-      " intacto: 1\n",
+      "' intacto: 1'\n",
       "\n",
       "Letra: j\n",
-      " jardines: 1\n",
+      "' jardines: 1'\n",
       "\n",
       "Letra: l\n",
-      " la: 3\n",
-      " labios: 1\n",
-      " las: 7\n",
-      " lo: 2\n",
-      " los: 4\n",
-      " luna: 1\n",
-      " lévate: 1\n",
-      " límpiate: 1\n",
+      "' la: 3'\n",
+      "' labios: 1'\n",
+      "' las: 7'\n",
+      "' lo: 2'\n",
+      "' los: 4'\n",
+      "' luna: 1'\n",
+      "' lévate: 1'\n",
+      "' límpiate: 1'\n",
       "\n",
       "Letra: m\n",
-      " mano: 1\n",
-      " manos: 1\n",
-      " margarita: 1\n",
-      " me: 10\n",
-      " mi: 1\n",
-      " mieles: 1\n",
-      " milagros: 1\n",
-      " mojada;: 1\n",
-      " montaña;: 1\n",
-      " morados: 1\n",
+      "' mano: 1'\n",
+      "' manos: 1'\n",
+      "' margarita: 1'\n",
+      "' me: 10'\n",
+      "' mi: 1'\n",
+      "' mieles: 1'\n",
+      "' milagros: 1'\n",
+      "' mojada;: 1'\n",
+      "' montaña;: 1'\n",
+      "' morados: 1'\n",
       "\n",
       "Letra: n\n",
-      " negros: 1\n",
-      " ni: 2\n",
-      " no: 1\n",
-      " nácar: 1\n",
-      " nívea: 2\n",
+      "' negros: 1'\n",
+      "' ni: 2'\n",
+      "' no: 1'\n",
+      "' nácar: 1'\n",
+      "' nívea: 2'\n",
       "\n",
       "Letra: p\n",
-      " perdone: 2\n",
-      " perfume: 1\n",
-      " por: 2\n",
-      " pretendes: 3\n",
-      " preténdeme: 3\n",
-      " puesto: 1\n",
-      " pájaros: 1\n",
-      " pámpanos: 1\n",
+      "' perdone: 2'\n",
+      "' perfume: 1'\n",
+      "' por: 2'\n",
+      "' pretendes: 3'\n",
+      "' preténdeme: 3'\n",
+      "' puesto: 1'\n",
+      "' pájaros: 1'\n",
+      "' pámpanos: 1'\n",
       "\n",
       "Letra: q\n",
-      " que: 6\n",
-      " quedó: 1\n",
-      " quieres: 6\n",
+      "' que: 6'\n",
+      "' quedó: 1'\n",
+      "' quieres: 6'\n",
       "\n",
       "Letra: r\n",
-      " rayo: 1\n",
-      " raíz: 1\n",
-      " renueva: 1\n",
-      " rocas;: 1\n",
-      " rojo: 1\n",
+      "' rayo: 1'\n",
+      "' raíz: 1'\n",
+      "' renueva: 1'\n",
+      "' rocas;: 1'\n",
+      "' rojo: 1'\n",
       "\n",
       "Letra: s\n",
-      " salitre: 1\n",
-      " se: 2\n",
-      " sea: 1\n",
-      " sean: 1\n",
-      " sobre: 2\n",
-      " sé: 1\n",
+      "' salitre: 1'\n",
+      "' se: 2'\n",
+      "' sea: 1'\n",
+      "' sean: 1'\n",
+      "' sobre: 2'\n",
+      "' sé: 1'\n",
       "\n",
       "Letra: t\n",
-      " te: 3\n",
-      " tejidos: 1\n",
-      " tenue: 1\n",
-      " tierra: 1\n",
-      " toca: 1\n",
-      " todas: 2\n",
-      " todavía: 1\n",
-      " tornadas: 1\n",
-      " tú: 8\n",
+      "' te: 3'\n",
+      "' tejidos: 1'\n",
+      "' tenue: 1'\n",
+      "' tierra: 1'\n",
+      "' toca: 1'\n",
+      "' todas: 2'\n",
+      "' todavía: 1'\n",
+      "' tornadas: 1'\n",
+      "' tú: 8'\n",
       "\n",
       "Letra: u\n",
-      " un: 1\n",
-      " una: 1\n",
+      "' un: 1'\n",
+      "' una: 1'\n",
       "\n",
       "Letra: v\n",
-      " vestido: 1\n",
-      " vete: 1\n",
-      " vive: 1\n",
+      "' vestido: 1'\n",
+      "' vete: 1'\n",
+      "' vive: 1'\n",
       "\n",
       "Letra: y\n",
-      " y: 5\n",
+      "' y: 5'\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "import pprint\n",
+    "\n",
     "with open('tu_me_quieres_blanca.txt', 'r', encoding='utf-8') as f:\n",
     "    texto = f.read()\n",
     "\n",
     "\n",
     "def contadorEndreçador(texto):\n",
-    "    texto = texto.replace('.', '').replace(',', '').replace('(', '').replace(')', '').replace(\"!\",\"\").replace(\"¡\",\"\")\n",
+    "    texto = re.sub(r\"[!,\\.\\)\\(¡]\", \"\", texto)\n",
     "    texto = texto.lower()\n",
     "    palabras=texto.split()\n",
     "\n",
@@ -513,7 +523,7 @@
     "    for letra, palabras in dictionary.items():\n",
     "        print(f\"Letra: {letra}\")\n",
     "        for palabra, cuenta in palabras.items():\n",
-    "            print(f\" {palabra}: {cuenta}\")\n",
+    "            pprint.pprint(f\" {palabra}: {cuenta}\")\n",
     "        print()\n",
     "\n",
     "\n",
