--- a/Sprint8.2.ipynb
+++ b/Sprint8.2.ipynb
@@ -9,59 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b490a06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Script usado para importar la base de datos en power bi\n",
-    "import pandas as pd\n",
-    "import mysql.connector\n",
-    "\n",
-    "conn = mysql.connector.connect(\n",
-    "    host='localhost',\n",
-    "    user='root',\n",
-    "    password='1234',\n",
-    "    database='sprint4',\n",
-    "    auth_plugin='mysql_native_password'\n",
-    ")\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM transactions_products \n",
-    "\"\"\"\n",
-    "transactions_products = pd.read_sql(query, conn)\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM transaction\n",
-    "\"\"\"\n",
-    "transaction = pd.read_sql(query, conn)\n",
-    "\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM companies\n",
-    "\"\"\"\n",
-    "companies = pd.read_sql(query, conn)\n",
-    "\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM users\n",
-    "\"\"\"\n",
-    "users = pd.read_sql(query, conn)\n",
-    "\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM credit_cards\n",
-    "\"\"\"\n",
-    "credit_cards = pd.read_sql(query, conn)\n",
-    "\n",
-    "query=\"\"\"\n",
-    "SELECT * FROM products\n",
-    "\"\"\"\n",
-    "products = pd.read_sql(query, conn)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ce789cec",
    "metadata": {},
@@ -76,15 +23,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "SELECT product_id,count(product_id) as cantidad\n",
+    "FROM transactions_products \n",
+    "JOIN transaction on id = transaction_id \n",
+    "WHERE declined=0\n",
+    "group by product_id\n",
+    "\"\"\"\n",
+    "n1ej1=pd.read_sql(query,conn)\n",
+    "\n",
+    "#grafico\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.tight_layout()\n",
     "seab.set_theme()\n",
-    "seab.countplot(data=df, x='product_id',order=df[\"product_id\"].value_counts().index) \n",
+    "seab.countplot(data=dataset, x='product_id',order=dataset[\"product_id\"].value_counts().index) \n",
     "plt.xlabel('ID Producto', fontsize=14)\n",
     "plt.ylabel(\"Cantidad vendida\", fontsize=14)\n",
     "plt.show()"
@@ -105,26 +72,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT product_id, count(product_id) as cantidad, count(*) * CAST(REPLACE(price, '$', '') AS DECIMAL(10,2)) as suma\n",
+    "FROM transactions_products\n",
+    "JOIN transaction on id = transaction_id \n",
+    "join products on product_id = products.id\n",
+    "WHERE declined=0\n",
+    "GROUP BY product_id\n",
+    "\"\"\"\n",
+    "nv1ej2 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df_grouped = df.groupby('product_id', as_index=False).agg(\n",
-    "    cantidad=('product_id', 'count'),\n",
-    "    suma=('price', lambda x: x.count() * x.iloc[0])\n",
-    ")\n",
-    "\n",
-    "df_grouped = df_grouped.sort_values(by='suma', ascending=False)\n",
-    "\n",
     "seab.set_theme()\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "ax = seab.barplot(data=df_grouped, x='product_id', y='suma', order=df_grouped['product_id'])\n",
-    "plt.xlabel(\"ID del producto\", fontsize=14)\n",
-    "plt.ylabel(\"Total\", fontsize=14)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.scatter(dataset['cantidad'], dataset['suma'])\n",
+    "plt.xlabel('Cantidad de cada producto')\n",
+    "plt.ylabel('Total en dolares')\n",
+    "plt.title('Relación entre cantidad de producto y cantidad en dolares')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -142,13 +121,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query = \"\"\"\n",
+    "SELECT country , count(country) AS cantPais\n",
+    "FROM companies\n",
+    "GROUP BY country\n",
+    "\"\"\"\n",
+    "nv1ej3 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df_grouped = df.groupby(\"country\").size().reset_index(name=\"cantPais\")\n",
-    "df_top = df_grouped.sort_values(by=\"cantPais\", ascending=False)\n",
+    "df_top = dataset.sort_values(by=\"cantPais\", ascending=False)\n",
     "\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.pie(\n",
@@ -178,17 +173,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT company_id, sum(amount) as suma\n",
+    "FROM companies\n",
+    "JOIN transaction on company_id = business_id \n",
+    "WHERE declined=0\n",
+    "GROUP BY company_id\n",
+    "\"\"\"\n",
+    "nv1ej4 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(10,5))\n",
     "seab.set_theme()\n",
-    "order = df.sort_values(by='amount', ascending=False)['company_id']\n",
+    "order = dataset.sort_values(by='suma', ascending=False)['company_id']\n",
     "plt.yscale(\"log\")\n",
     "plt.xticks(rotation=90) \n",
-    "seab.barplot(data=df, x='company_id',y='amount',order=order) \n",
+    "seab.barplot(data=dataset, x='company_id',y='suma',order=order) \n",
     "plt.tight_layout(pad=2)\n",
     "plt.xlabel('ID Compañia')\n",
     "plt.ylabel(\"Cantidad en dolares\")\n",
@@ -210,15 +224,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT users.country as userCountry, companies.country as companyCountry, user_id , company_id\n",
+    "FROM users\n",
+    "JOIN transaction on users.id=user_id\n",
+    "JOIN companies on company_id = business_id \n",
+    "WHERE declined=0\n",
+    "\"\"\"\n",
+    "nv1ej5 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "seab.set_theme()\n",
     "plt.figure(figsize=(15, 8)) \n",
-    "seab.countplot(data=df, x='country.1', hue='country',legend=1)\n",
+    "seab.countplot(data=dataset,  x='userCountry', hue='companyCountry',legend=1)\n",
     "plt.tight_layout(pad=2)\n",
     "plt.xlabel('País del usuario', fontsize=16)\n",
     "plt.ylabel(\"Cantidad\", fontsize=16)\n",
@@ -240,16 +273,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT company_id, country, sum(amount) as suma\n",
+    "FROM companies\n",
+    "JOIN transaction on company_id = business_id \n",
+    "WHERE declined=0\n",
+    "GROUP BY company_id, country\n",
+    "\"\"\"\n",
+    "nv1ej6 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "seab.set_theme()\n",
     "plt.tight_layout()\n",
-    "g=seab.catplot(data=df, x=\"country\", y=\"amount\", kind=\"swarm\",height=6, aspect=2)\n",
+    "g=seab.catplot(data=dataset, x=\"country\", y=\"suma\", kind=\"swarm\",height=6, aspect=2)\n",
     "g.set_xticklabels(rotation=45)\n",
+    "\n",
     "plt.ylabel(\"Total en dolares\", fontsize=14)\n",
     "plt.xlabel(\"País\", fontsize=14)\n",
     "plt.show()"
@@ -270,19 +322,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT count(product_id) as conteo , amount as total, transaction_id\n",
+    "FROM transaction\n",
+    "JOIN transactions_products on transaction_id = transaction.id\n",
+    "JOIN products on products.id = product_id\n",
+    "JOIN companies on company_id=business_id\n",
+    "WHERE declined=0\n",
+    "group by transaction_id\n",
+    "\"\"\"\n",
+    "nv1ej7 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "df = df.rename(columns={\n",
-    "    'amount': 'Cantidad en dólares',\n",
-    "    'product_id': 'Cantidad de productos'\n",
-    "})\n",
     "plt.tight_layout(pad=2)\n",
     "seab.set_theme()\n",
-    "g=seab.pairplot(df,size=4)\n",
+    "g=seab.pairplot(dataset,size=4)\n",
     "for ax in g.axes.flatten():\n",
     "    ax.set_xlabel(ax.get_xlabel(), fontsize=16)\n",
     "    ax.set_ylabel(ax.get_ylabel(), fontsize=16)\n",
@@ -313,22 +381,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT transaction_id, COUNT(product_id) as cantidadProductos, AVG(weight) as averageWeigth, max(amount) as total$, AVG(CAST(REPLACE(price, '$', '') AS DECIMAL(10,2))) AS averagePrice\n",
+    "FROM transaction\n",
+    "JOIN transactions_products ON transaction_id = transaction.id\n",
+    "JOIN products ON products.id = product_id\n",
+    "JOIN companies ON company_id = business_id\n",
+    "WHERE declined = 0\n",
+    "GROUP BY transaction_id\n",
+    "\"\"\"\n",
+    "nv2ej1 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
-    "df = df.rename(columns={\n",
-    "    'amount': 'Cantidad en dólares',\n",
-    "    'product_id': 'Cantidad de productos',\n",
-    "    \"weight\" : \"Peso del producto\",\n",
-    "    \"price\" : \"Precio del prodcto\"\n",
-    "})\n",
     "seab.set_theme()\n",
-    "g=seab.pairplot(df, height=4)\n",
+    "g=seab.pairplot(dataset, height=4)\n",
     "for ax in g.axes.flatten():\n",
     "    ax.set_xlabel(ax.get_xlabel(), fontsize=18)\n",
     "    ax.set_ylabel(ax.get_ylabel(), fontsize=18)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -347,20 +431,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT weight as peso, amount as total, transaction.id\n",
+    "FROM transaction\n",
+    "JOIN transactions_products ON transaction_id = transaction.id\n",
+    "JOIN products ON products.id = product_id\n",
+    "WHERE declined = 0\n",
+    "\"\"\"\n",
+    "\n",
+    "nv2ej2 = pd.read_sql(query, conn)\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = df.rename(columns={\n",
-    "    'amount': 'Cantidad en dólares',\n",
-    "    'weight': 'Peso del producto'\n",
-    "})\n",
     "seab.set_theme()\n",
-    "g=seab.jointplot(data=df, x=\"Cantidad en dólares\", y=\"Peso del producto\") \n",
+    "g=seab.jointplot(data=dataset, x=\"total\", y=\"peso\") \n",
     "g.ax_joint.set_xlabel(\"Cantidad en dólares\", fontsize=16)\n",
     "g.ax_joint.set_ylabel(\"Peso del producto\", fontsize=16)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -387,19 +487,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT users.country as country, amount, transaction.id\n",
+    "FROM transaction\n",
+    "JOIN users on users.id=user_id\n",
+    "join companies on company_id=business_id\n",
+    "WHERE declined = 0\n",
+    "\"\"\"\n",
+    "nv3ej1 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "seab.set_theme()\n",
-    "seab.violinplot(data=df, x=\"country\", y='amount', inner=None, color=\"lightgray\")\n",
-    "seab.stripplot(data=df, x='country', y='amount', color='black', size=3, jitter=True)\n",
+    "\n",
+    "seab.violinplot(data=dataset, x=\"country\", y='amount', inner=None, color=\"lightgray\")\n",
+    "seab.stripplot(data=dataset, x='country', y='amount', color='black', size=3, jitter=True)\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.ylabel(\"Dolares\" , fontsize=13)\n",
     "plt.xlabel(\"País\", fontsize=13)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -417,19 +537,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dataset.drop_duplicates()\n",
+    "#importacion\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
     "\n",
+    "conn = mysql.connector.connect(\n",
+    "    host='localhost',\n",
+    "    user='root',\n",
+    "    password='1234',\n",
+    "    database='sprint4',\n",
+    "    auth_plugin='mysql_native_password'\n",
+    ")\n",
+    "query=\"\"\"\n",
+    "SELECT users.country as userCountry, companies.country as companyCountry, sum(amount) as total, transaction.id\n",
+    "FROM transaction\n",
+    "JOIN users on users.id=user_id\n",
+    "join companies on company_id=business_id\n",
+    "WHERE declined = 0\n",
+    "group by userCountry,companyCountry,transaction.id\n",
+    "\"\"\"\n",
+    "nv3ej2 = pd.read_sql(query, conn)\n",
+    "\n",
+    "#grafico\n",
     "import pandas as pd\n",
     "import seaborn as seab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "df_agg = dataset.groupby([\"userCountry\", \"companyCountry\"], as_index=False)[\"total\"].sum()\n",
     "seab.set_theme()\n",
-    "g = seab.FacetGrid(df, col='country', height=4, aspect=1.2)\n",
-    "g.map_dataframe(seab.barplot, x='country.1', y=\"amount\")\n",
-    "g.set_axis_labels(\"País de la empresa\", \"Cantidad en dólares\")\n",
-    "g.set_xticklabels(rotation=90, fontsize=10) \n",
+    "g = seab.FacetGrid(df_agg, col=\"userCountry\", height=4, aspect=1.2)\n",
+    "g.map_dataframe(seab.barplot, x=\"companyCountry\", y='total')\n",
     "g.set_xticklabels(rotation=90)\n",
     "plt.tight_layout()\n",
+    "g.fig.suptitle(\"Países de las compañías donde los usuarios gastan el dinero\", y=1.05, x=0.54)\n",
     "plt.show()"
    ]
   }
